fixed z-index so search icon. fixed bug in wikidata portait logic.

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -905,7 +905,7 @@ hr {
     height : 1.3em;
     .glass {
         position : relative;
-        z-index : 10;
+        z-index : 400;
     }
     .shadow {
         position: relative;
